--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,7 @@
     "axios": "^1.13.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^7.10.0",
-    "tailwindcss": "^4.1.17"
+    "react-router-dom": "^7.10.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
@@ -24,6 +23,7 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "tailwindcss": "^3.4.18",
     "vite": "^7.2.4"
   }
 }
